PLS-12840, PLS-12871, PLS-12940 - account is no required except when match fields is enabled - added message for leaving config attributes page - fixed tool tip z-index

--- a/le-ui/projects/common/assets/sass/_tooltips.scss
+++ b/le-ui/projects/common/assets/sass/_tooltips.scss
@@ -298,6 +298,7 @@ tooltip {
         font-weight: normal;
         font-size: 125%;
         text-align: left;
+        z-index: 10000;
         &.large {
           width: 500px;
           padding-top: 15px;
